Исправляет ошибки после тестирования и добавляет интерактивный блок с картой

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -9,7 +9,7 @@
 
   @media (min-width: @desktop-width) {
     padding-top: 100px;
-    padding-bottom: 96px;
+    padding-bottom: 120px;
   }
 }
 
@@ -25,12 +25,12 @@
   @media (min-width: @tablet-width) {
     font-size: 42px;
     line-height: 64px;
-    margin-bottom: 60px;
+    margin-bottom: 59px;
     min-height: 128px;
   }
 
-  @media (min-width: @tablet-width) {
-    margin-bottom: 80px;
+  @media (min-width: @desktop-width) {
+    margin-bottom: 90px;
     min-height: 64px;
   }
 }
@@ -45,8 +45,8 @@
 
   @media (min-width: @tablet-width) {
     grid-template-columns: 1fr 1fr;
-    column-gap: 50px;
-    row-gap: 30px;
+    column-gap: 10px;
+    row-gap: 50px;
   }
 
   @media (min-width: @desktop-width) {
@@ -111,6 +111,7 @@
     @media (min-width: @desktop-width) {
       left: 0;
       right: 0;
+      top: -10px
     }
   }
 
@@ -135,6 +136,7 @@
     @media (min-width: @desktop-width) {
       left: 0;
       right: 0;
+      top: -10px
     }
   }
 
@@ -159,6 +161,7 @@
     @media (min-width: @desktop-width) {
       left: 0;
       right: 0;
+      top: -10px
     }
   }
 
@@ -183,6 +186,7 @@
     @media (min-width: @desktop-width) {
       left: 0;
       right: 0;
+      top: -10px
     }
   }
 }
