--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -28,22 +28,38 @@
     min-width: 116px;
   }
 
+  &--margin:not(:last-child) {
+
+    @media (min-width: @tablet-width) {
+      margin-right: 30px;
+    }
+
+    @media (min-width: @desktop-width) {
+      margin-right: 18px;
+    }
+  }
+
+  &--margin {
+    margin-bottom: 24px;
+  }
+
   &--submit {
     padding: 10px 14px;
     min-height: 45px;
     font-size: 13px;
     line-height: 24px;
-    margin-bottom: 24px;
 
     @media (min-width: @tablet-width) {
-      margin-bottom: 0;
-      margin-right: 30px;
-      padding: 8px 3px;
+      padding: 0 3px;
+      margin-left: 180px;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 24px;
     }
 
     @media (min-width: @desktop-width) {
-      margin-right: 18px;
       padding: 8px 4px;
+      margin-left: 0;
     }
   }
 
@@ -57,6 +73,9 @@
 
     @media (min-width: @tablet-width) {
       padding: 8px 5px;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 24px;
     }
 
     @media (min-width: @desktop-width) {
@@ -95,7 +114,6 @@
       top: 10px;
       left: 20px;
       background-image: url("../../img/basket-button.svg");
-
     }
   }
 }
