--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -10,7 +10,7 @@
   }
 
   &:hover {
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
   }
 }
 
@@ -45,7 +45,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  margin-bottom: 18px;
+  margin-bottom: 16px;
   min-height: 60px;
 
   @media (min-width: @tablet-width) {
@@ -56,7 +56,12 @@
 
 .card__price-wrapper {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+
+  @media (min-width: @tablet-width) {
+    justify-content: space-between;
+  }
 }
 
 .card__price {
