--- a/source/less/blocks/information.less
+++ b/source/less/blocks/information.less
@@ -11,6 +11,10 @@
   padding-bottom: 28px;
   list-style-type: none;
 
+  &--padding {
+    padding-bottom: 20px;
+  }
+
   @media (min-width: @tablet-width) {
     padding-top: 0;
     padding-bottom: 0;
@@ -21,7 +25,7 @@
   @media (min-width: @tablet-width) {
     display: flex;
     flex-wrap: wrap;
-    padding-bottom: 38px;
+    padding-bottom: 18px;
     padding-right: 20px;
     padding-left: 20px;
   }
@@ -49,5 +53,29 @@
   @media (min-width: @tablet-width) {
     border: none;
     width: 33.3%;
+
+    &--media {
+      padding-left: 10px;
+    }
+
+    &--address {
+      padding-left: 20px;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 8px;
+
+    &--media {
+      padding-left: 12px;
+    }
+
+    &--address {
+      padding-left: 27px;
+    }
   }
 }
