--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -5,35 +5,13 @@
   min-width: 320px;
   width: 100%;
   height: 420px;
-  background-image: url("../../img/map-mobile.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 320px 420px;
-
-  @media (min-resolution: 2dppx) {
-    background-image: url("../../img/map-mobile-2x.png");
-    background-size: 320px 362px;
-  }
+  background-color: @color-base-grey;
 
   @media (min-width: @tablet-width) {
     height: 480px;
-    background-image: url("../../img/map-tablet.png");
-    background-size: 768px 480px;
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../../img/map-tablet-2x.png");
-      background-size: 768px 480px;
-    }
   }
 
   @media (min-width: @desktop-width) {
     height: 540px;
-    background-image: url("../../img/map-desktop.png");
-    background-size: 1440px 540px;
-
-    @media (min-resolution: 2dppx) {
-      background-image: url("../../img/map-desktop-2x.png");
-      background-size: 1440px 540px;
-    }
   }
 }
