--- a/source/less/blocks/slider-card.less
+++ b/source/less/blocks/slider-card.less
@@ -73,8 +73,8 @@
 .slider-card-img-wrapper {
   width: 280px;
   height: 280px;
-  margin-bottom: 10px;
   margin: 0 auto;
+  margin-bottom: 10px;
 
   @media (min-width: @tablet-width) {
     margin-bottom: 0;
@@ -86,7 +86,6 @@
     width: 600px;
     height: 600px;
     margin-left: 65px;
-
   }
 }
 
@@ -115,6 +114,7 @@
   margin-bottom: 10px;
   font-weight: 700;
   font-size: 36px;
+  letter-spacing: 0.02em;
   line-height: 48px;
   text-align: center;
   min-height: 96px;
@@ -129,6 +129,14 @@
 
   @media (min-width: @desktop-width) {
     text-align: left;
+  }
+}
+
+.slider-card__text {
+  @media (max-width: @mobile-width-only) {
+    br {
+      display: none;
+    }
   }
 }
 
@@ -153,7 +161,7 @@
   @media (min-width: @desktop-width) {
     text-align: left;
     padding-left: 0;
-    padding-right: 90px;
+    padding-right: 40px;
     margin-bottom: 40px;
   }
 }
@@ -164,6 +172,7 @@
   line-height: 32px;
   color: @color-base-primary;
   padding-right: 6px;
+  padding-top: 5px;
 }
 
 .slider-card__new-price {
@@ -171,10 +180,12 @@
   font-size: 20px;
   line-height: 32px;
   padding-right: 20px;
+  padding-top: 2px;
 }
 
 .slider-card__price-wrapper {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 
   @media (min-width: @tablet-width) {
@@ -192,7 +203,6 @@
   display: none;
 
   @media (min-width: @desktop-width) {
-    margin: 0;
     padding: 0;
     list-style-type: none;
     display: flex;
@@ -216,5 +226,4 @@
       background-color: @color-base-primary;
     }
   }
-
 }
