Добавляет интерактивные элементы на страницу с помощью библиотек js

--- a/source/less/blocks/navigation.less
+++ b/source/less/blocks/navigation.less
@@ -42,6 +42,10 @@
   &:active {
     background-color: @color-base-secondary;
   }
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
 
 @media (max-width: @mobile-width-only) {
