--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -61,6 +61,7 @@
 
   @media (min-width: @tablet-width) {
     padding-left: 82px;
+    max-width: 350px;
   }
 
   @media (min-width: @desktop-width) {
@@ -111,7 +112,7 @@
     @media (min-width: @desktop-width) {
       left: 0;
       right: 0;
-      top: -10px
+      top: -10px;
     }
   }
 
@@ -136,7 +137,7 @@
     @media (min-width: @desktop-width) {
       left: 0;
       right: 0;
-      top: -10px
+      top: -10px;
     }
   }
 
@@ -161,7 +162,7 @@
     @media (min-width: @desktop-width) {
       left: 0;
       right: 0;
-      top: -10px
+      top: -10px;
     }
   }
 
@@ -186,7 +187,7 @@
     @media (min-width: @desktop-width) {
       left: 0;
       right: 0;
-      top: -10px
+      top: -10px;
     }
   }
 }
